Fix invisible annotation background

--- a/apps/unclutter/source/overlay/index.css
+++ b/apps/unclutter/source/overlay/index.css
@@ -238,7 +238,7 @@
     animation: fadeInDot 0.15s linear !important;
 }
 
-.lindy-highlight {
+.lindy-highlight:not(#fakeID#fakeID#fakeID#fakeID) {
     cursor: pointer !important;
     background-color: var(--annotation-color) !important;
     transition: background-color 0.15s linear !important;
@@ -256,6 +256,13 @@
 .lindy-highlight.lindy-hover {
     /* background-color: var(--darker-annotation-color) !important; */
     /* box-shadow: 0.25em 0 0 var(--darker-annotation-color), -0.25em 0 0 var(--darker-annotation-color) !important; */
+}
+.lindy-smart-highlight:not(#fakeID#fakeID#fakeID#fakeID) {
+    display: block !important;
+    background: var(--annotation-color) !important;
+}
+.lindy-smart-highlight-click:not(#fakeID#fakeID#fakeID#fakeID) {
+    display: block !important;
 }
 
 .lindy-crowd-highlight {
